# RAG_DEMO

./: 5_6321358210854819901.md  check_database.py  config.py  docker_command.txt  document_processor.py  embedding_manager.py  indexing.py  main.py  nanonetocr.py  pyproject.toml  qdrant_setup.py  querying.py  test_gradio.py
data/: 01-2017-nq-hđnd.md  02-2017-nq-hđnd.md  03-2017-nq-hđnd.md  04-2017-nq-hđnd.md  04-nq-hđnd.md  05-2017-nq-hđnd.md  05-nq-hđnd.md  06-2017-nq-hđnd.md  07-2017-nq-hđnd.md  07-nq-hđnd.md  08-2017-nq-hđnd.md  08-nq-hđnd.md  09-2017-nq-hđnd.md  09-nq-hđnd.md  10-2017-nq-hđnd.md  11-2017-nq-hđnd.md  110-2017-nq-hđnd.md  112-2017-nq-hđnd.md  114-2017-nq-hđnd.md  115-2017-nq-hđnd.md  117-2017-nq-hđnd.md  118-2017-nq-hđnd.md  12-2017-nq-hđnd.md  120-2017-nq-hđnd.md  124-2017-nq-hđnd.md  126-2017-nq-hđnd.md  129-2017-nq-hđnd.md  13-2017-nq-hđnd.md  130-2017-nq-hđnd.md  14-2017-nq-hđnd.md  15-2017-nq-hđnd.md  16-2017-nq-hđnd.md  17-2017-nq-hđnd.md  17-nq-hđnd.md  18-2017-nq-hđnd.md  19-2017-nq-hđnd.md  20-2017-nq-hđnd.md  20-nq-hđnd.md  21-2017-nq-hđnd.md  22-2017-nq-hđnd.md  (+95 more)
